--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <seamVersion>2.0.1.CR1</seamVersion>
         <richfacesVersion>3.1.2.SP1</richfacesVersion>
-        <faceletsVersion>1.1.11</faceletsVersion>
+        <faceletsVersion>[1.1,)</faceletsVersion>
         <digesterVersion>1.8</digesterVersion>
         <jbossEmbeddedVersion>beta2</jbossEmbeddedVersion>
     </properties>
@@ -502,7 +502,7 @@
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
-            <version>1.0</version>
+            <version>[1.0,)</version>
             <scope>provided</scope>
         </dependency>
 
@@ -537,7 +537,7 @@
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
-            <version>1.1</version>
+            <version>[1.1,)</version>
             <scope>provided</scope>
         </dependency>
 
@@ -551,35 +551,35 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
+            <version>[2.0,)</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.1.2</version>
+            <version>[1.1,)</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
-            <version>1.0</version>
+            <version>[1.0,)</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>jsf-api</artifactId>
-            <version>1.2</version>
+            <version>[1.2,)</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>jsf-impl</artifactId>
-            <version>1.1_02</version>
+            <version>1.2-b19</version>
             <scope>provided</scope>
         </dependency>
 
@@ -615,7 +615,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.4</version>
+            <version>[4.0,)</version>
             <scope>test</scope>
         </dependency>
 
@@ -644,22 +644,6 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty6-plugin</artifactId>
-                <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.geronimo.specs</groupId>
-                        <artifactId>geronimo-j2ee_1.4_spec</artifactId>
-                        <version>1.0</version>
-                        <scope>provided</scope>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
         </plugins>
     </build>
 
