--- a/trunk/intellidocs-ear/pom.xml
+++ b/trunk/intellidocs-ear/pom.xml
@@ -94,54 +94,49 @@
     </build>
 
     <profiles>
-      <!-- Profile which runs cargo -->
-      <profile>
-        <id>cargo</id>
-        <build>
-          <plugins>
-              <plugin>
-                  <groupId>org.codehaus.cargo</groupId>
-                  <artifactId>cargo-maven2-plugin</artifactId>
-                  <configuration>
-                      <!-- Container configuration -->
-                      <container>
-                          <containerId>jboss4x</containerId>
-                          <home>/opt/share/jboss-4.2.2.GA</home>
-                      </container>
-                      <!-- Configuration to use with the container -->
-                      <configuration>
-                          <type>existing</type>
-                          <home>/opt/share/jboss-4.2.2.GA/server/default</home>
-                          <properties>
-                              <cargo.jboss.configuration>default
-                              </cargo.jboss.configuration>
-                          </properties>
-                      </configuration>
-                      <!-- Deployer configuration -->
-                      <deployer>
-                          <type>installed</type>
-                          <deployables>
-                              <deployable>
-                                  <groupId>com.ibt.intellidocs</groupId>
-                                  <artifactId>intellidocs-ear</artifactId>
-                                  <type>ear</type>
-                                  <pingURL>
-                                      http://localhost:8080/intellidocs/home.xhtml
-                                  </pingURL>
-                              </deployable>
-                          </deployables>
-                      </deployer>
-                  </configuration>
-              </plugin>
-          </plugins>
-        </build>
-        <activation>
-          <property>
-            <name>cargo</name>
-          </property>
-        </activation>
-      </profile>
+        <!-- Profile which runs cargo on JBoss4x container-->
+        <profile>
+            <id>jboss</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.cargo</groupId>
+                        <artifactId>cargo-maven2-plugin</artifactId>
+                        <configuration>
+                            <!-- Container configuration -->
+                            <container>
+                                <containerId>jboss4x</containerId>
+                                <home>${jboss.home}</home>
+                                <log>${project.build.directory}/cargo.log</log>
+                            </container>
+                            <!-- Configuration to use with the container -->
+                            <configuration>
+                                <type>existing</type>
+                                <home>${jboss.home}/server/default</home>
+                                <properties>
+                                    <cargo.jboss.configuration>default
+                                    </cargo.jboss.configuration>
+                                </properties>
+                            </configuration>
+                            <!-- Deployer configuration -->
+                            <deployer>
+                                <type>installed</type>
+                                <deployables>
+                                    <deployable>
+                                        <groupId>com.ibt.intellidocs</groupId>
+                                        <artifactId>intellidocs-ear</artifactId>
+                                        <type>ear</type>
+                                    </deployable>
+                                </deployables>
+                            </deployer>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
     </profiles>
-
 </project>
 
