--- a/trunk/intellidocs-war/src/test/filters/filter-dev.properties
+++ b/trunk/intellidocs-war/src/test/filters/filter-dev.properties
@@ -1,3 +1,13 @@
+#=================================================================== -->
+# LOCAL USER SETTINGS -->
+# This exists for Continuum to build the project with default settings.
+# -->
+# NOTE: FEEL FREE TO CHANGE SETTINGS TO REFLECT YOUR ENVIRONMENT -->
+# IMPORTANT: BUT DO NOT CHECK-IN -->
+# -->
+# This exists for Continuum to build the project with default settings.
+# LOCAL USER SETTINGS -->
+# =================================================================== -->
 persistence.unit_name=DefaultDS
 persistence.jta_data_source=DefaultDS
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
