--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -18,7 +18,7 @@
     </prerequisites>
 
     <ciManagement>
-        <url>http://ns1:8082/continuum</url>
+        <url>http://ns3:8082/continuum</url>
         <system>continuum</system>
         <notifiers>
             <notifier>
@@ -31,11 +31,8 @@
     </ciManagement>
 
     <scm>
-        <connection>scm:svn:http://intellidocs.googlecode.com/svn/trunk/
-        </connection>
-        <developerConnection>
-            scm:svn:https://intellidocs.googlecode.com/svn/trunk/
-        </developerConnection>
+        <connection>scm:svn:http://intellidocs.googlecode.com/svn/trunk/</connection>
+        <developerConnection>scm:svn:https://intellidocs.googlecode.com/svn/trunk/</developerConnection>
         <url>http://intellidocs.googlecode.com/svn/trunk/</url>
     </scm>
 
@@ -82,14 +79,14 @@
     <repositories>
         <repository>
             <id>central</id>
-            <url>http://ns1:8081/artifactory/repo</url>
+            <url>http://ns3:8081/artifactory/repo</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
         <repository>
             <id>snapshots</id>
-            <url>http://ns1:8081/artifactory/repo</url>
+            <url>http://ns3:8081/artifactory/repo</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -99,14 +96,14 @@
     <pluginRepositories>
         <pluginRepository>
             <id>central</id>
-            <url>http://ns1:8081/artifactory/repo</url>
+            <url>http://ns3:8081/artifactory/repo</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
         <pluginRepository>
             <id>snapshots</id>
-            <url>http://ns1:8081/artifactory/repo</url>
+            <url>http://ns3:8081/artifactory/repo</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
